Add external call to validate if the transaction is authorized or not.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
+
+services:
+  authorization-service: https://run.mocky.io/v3/91c7417a-a8d0-486f-bca2-a46473c2e37e
